# nocr

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
Experiments-programs/: CMakeLists.txt
Experiments-programs/1-stage-scores/: CMakeLists.txt  main.cpp
Experiments-programs/1-stage-test/: CMakeLists.txt  main.cpp
Experiments-programs/1stage-letter-evaluation/: .main.cpp.swp  CMakeLists.txt  main.cpp  segmentation_test.cpp  segmentation_test.hpp
Experiments-programs/common/: segmentation_base.cpp  segmentation_base.hpp
Experiments-programs/gt-extractor/: CMakeLists.txt  main.cpp
Experiments-programs/icdar2013-evaluation/: CMakeLists.txt  main.cpp
Experiments-programs/ocr-evaluation/: CMakeLists.txt  main.cpp
Experiments-programs/svt-evaluation/: CMakeLists.txt  experiment_class.h  main.cpp
External-libraries/: CMakeLists.txt
External-libraries/liblinear-1.94/: CMakeLists.txt  heart_scale  heart_scale.model  predict  train
External-libraries/libsvm-3.18/: CMakeLists.txt  er_2stage_desc  libsvmPrepare.py  scaled_e  svm-predict  svm-scale  svm-train.c
External-libraries/libsvm-3.18/libsvm/: svm.cpp  svm.h
External-libraries/libsvm-3.18/svm-toy/: scaled_er
External-libraries/libsvm-3.18/svm-toy/qt/: svm-toy.moc
External-libraries/libsvm-3.18/tools/: er_2stage_desc.out
External-libraries/pugixml/: CMakeLists.txt  pugixml.cpp
NOCRGui/: CMakeLists.txt
NOCRGui/NOCRGui/: NOCRGui.pro  convertoropencv.cpp  convertoropencv.h  dict  imageworker.cpp  imageworker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newwordsdialog.cpp  newwordsdialog.h  newwordsdialog.ui  translationrecord.cpp  translationrecord.h  xmlcreator.cpp  xmlcreator.h
NOCRLib/: 2  ;  CMakeLists.txt
NOCRLib/include/nocrlib/: abstract_feature.h  abstract_feature_factory.h  abstract_ocr.h  assert.h  bag_of_words.h  classifier_wrap.h  component.h  component_tree_builder.h  component_tree_node.h  dictionary.h  direction_histogram.h  drawer.h  er_region.h  exception.h  extremal_region.h  feature_factory.h  feature_traits.h  features.h  ground_truth_impl.h  iksvm.h  iooper.h  key_point_extractor.h  knn_ocr.h  letter_equiv.h  levenstein_distance.h  ocr.h  opencv_mser.h  segment.h  street_view_scene.h  structures.h  swt.h  swt_segmentation.h  testing.h  text_recognition.h  train_data.h  trie_node.h  utilities.h  word_deformation.h  word_generator.h
NOCRLib/nocrlib/: component_tree_builder.c  component_tree_node.c  desionTree.c  feature_traits.c
NOCRLib/src/: .word_generator.cpp.swp  bag_of_words.cpp  classifier_wrap.cpp  component.cpp  dictionary.cpp  direction_histogram.cpp  drawer.cpp  er_region.cpp  extremal_region.cpp  features.cpp  ground_truth_impl.cpp  iksvm.cpp  iooper.cpp  key_point_extractor.cpp  knn_ocr.cpp  letter_equiv.cpp  levenstein_distance.cpp  ocr.cpp  opencv_mser.cpp  segment.cpp  street_view_scene.cpp  structures.cpp  swt.cpp  swt_segmentation.cpp  testing.cpp  text_recognition.cpp  train_data.cpp  trie_node.cpp  word_deformation.cpp  word_generator.cpp
NOCRMain/: CMakeLists.txt  main.cpp  main.h  recorder_interface.h  translation_recorder.cpp  translation_recorder.h  xml_creator.cpp  xml_creator.h
PerformanceMeasuring-programs/: CMakeLists.txt
PerformanceMeasuring-programs/Er1Stage/: CMakeLists.txt  main.cpp  measure_task.cpp  measure_task.hpp
Training-programs/: CMakeLists.txt
Training-programs/1StageDescExtractor/: CMakeLists.txt  er_tree_interface.hpp  extractor.cpp  extractor.hpp  main.cpp
Training-programs/ErExtractor/: CMakeLists.txt  LetterExtractor.cpp  LetterExtractor.h  main.cpp
Training-programs/GtExtractor/: CMakeLists.txt  main.cpp
Training-programs/boosting-train/: CMakeLists.txt  main_desTree.cpp
Training-programs/svm-train/: CMakeLists.txt  main_desTree.cpp
Training-programs/train-generator/: CMakeLists.txt  SplitterWithMask.sh  boundImageWithMask.sh  flM  main_desTree.cpp
Training-programs/train-word-generator/: CMakeLists.txt  extractor.cpp  extractor.hpp  main.cpp
liblinear-1.94/: CMakeLists.txt
libsvm-3.18/: CMakeLists.txt  a  er_2stage_desc.model  libsvm_er2  scaled_e.model  scaled_er  scaled_er.model  scaling_factors  svm-train  svm.h  tmp.model
libsvm-3.18/svm-toy/gtk/: scaled_er  svm-toy
libsvm-3.18/tools/: scaled_er.out
pugixml/: CMakeLists.txt
